# testflags

./: .gitignore  BuildOnLinux.sh  BuildOnWindows.cmd  CMakeLists.txt
src/CMake/: CMakeDownload.cmake  CMakeFunctions.cmake
src/UnitTest/: CMakeLists.txt  unitFlug.cpp
src/include/: Flags.h
